tests/specs/ecosystem/adam/confetti/2_0_0.test
adam/confetti/2.0.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/confetti/confetti.ts
error: TS2304 [ERROR]: Cannot find name 'CSSStyleDeclaration'.
  customStyles?: CSSStyleDeclaration;
                 ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/confetti/confetti.ts:16:18

